# ratio_estimation

./: .gitignore  AGENTS.md  Makefile  README.md  elegance_efficiency.md  issues.md  pyproject.toml  requirements.txt
docs/: algorithms.md
experiments/: __init__.py  baselines.py  benchmark.py  benchmark_progress.py  benchmark_report.py  compare.py  data.py  evaluate.py  io.py  plot_groups.py  registry.py  single_stream.py  tune.py
learning/: __init__.py  autoreg.py  learners.py  proximal_operators.py
notebooks/: 01_sampling.ipynb  02_model_comparison.ipynb  amit_notebook.ipynb  sampling_examples.ipynb  scratchpad.ipynb
notebooks/archive/: sampling_examples.ipynb
simulation/: __init__.py  campaign_sampling.py  sampling.py  trends.py
src/ratio_estimation/: __init__.py  _state.py  features.py  models.py  proximal.py  simulation.py
tests/: test_experiments_smoke.py  test_features.py  test_models_smoke.py  test_proximal.py  test_simulation.py
