[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ratio-estimation"
version = "0.1.0"
description = "Research code for online ratio estimation on synthetic campaign time series."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2,<3",
  "scipy>=1.15,<2",
]

[dependency-groups]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]
experiments = [
  "matplotlib>=3.9,<4",
  "optuna>=4.2,<5",
  "pandas>=2.2,<3",
  "rich>=14,<15",
  "scikit-learn>=1.6,<2",
  "seaborn>=0.13,<0.14",
]
notebooks = [
  "ipykernel>=6.29,<7",
  "jupyterlab>=4.3,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ratio_estimation"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["artifacts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E741"]
"notebooks/*.ipynb" = ["E402"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["src", "experiments", "tests"]
exclude = ["artifacts", "notebooks"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
